<resources>
    <string name="app_name">Avestal</string>
    <string name="yandex_maps_API_key" translatable="false">09ee0a39-0ad1-490a-9ea8-8600c46b9ef8</string>


    <string name="close">Закрыть</string>
    <string name="back">Назад</string>

    <!--Order -->
    <string name="phone">Телефон</string>
    <string name="intercom">Домофон</string>
    <string name="entrance">Подъезд</string>
    <string name="floor">Этаж</string>
    <string name="apartment">Квартира</string>
    <string name="orderActivityTotal">Итого</string>
    <string name="address">Адрес</string>
    <string name="ordering">Оформление</string>
    <string name="promocode">Промокод</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="checkoutPayment">Оплатить</string>
    <string name="cardPayment">Оплата картой</string>
    <string name="paymentType">Способ оплаты</string>
    <string name="inYourOrder">Ваш заказ</string>
    <string name="inYourOrderProductsCount">Товаров:</string>
    <string name="delivery">Доставка</string>
    <string name="orderDiscount">Скидка по промокоду</string>
    <string name="card">Карта</string>
    <string name="cash">Наличные</string>

    <!--LoginFragment -->
    <string name="login">Войдите в приложение</string>
    <string name="phoneHint">+7</string>
    <string name="further">Далее</string>
    <string name="enterPhoneNumber">Введите номер телефона, чтобы подтвердить свою учетную запись</string>
    <string name="enterCorrectPhoneNumber">Введите корректный номер телефона</string>
    <string name="numberNotFound">Такого номера не существует, попробуйте другой</string>

    <!--Registration -->
    <string name="whatIsYourWork">Как вы работаете?</string>
    <string name="workMyself">На себя, я частный специалист</string>
    <string name="workCompany">Я ИП или представитель компании</string>
    <string name="whatIsYourName">Как вас зовут?</string>
    <string name="name">Имя</string>
    <string name="nameMustBeFilled">Поле имени должно быть заполнено</string>
    <string name="surname">Фамилия</string>
    <string name="surnameMustBeFilled">Поле фамилии должно быть заполнено</string>
    <string name="lastName">Отчество</string>
    <string name="lastNameMustBeFilled">Поле отчества должно быть заполнено</string>
    <string name="acceptPublicOfferStart">Я принимаю</string>
    <string name="acceptPublicOfferEnd">публичную оферту, условия использования</string>
    <string name="acceptPublicOffer">Примите публичную оферту</string>
    <string name="info">Чем вы занимаетесь?</string>
    <string name="infoEmpty">Заполните инфомацию о себе</string>
    <string name="infoHint">Расскажите о себе</string>
    <string name="addressEmpty">Поле региона должно быть заполнено</string>
    <string name="confirmUser">Подтверждение личности</string>
    <string name="takeUserIDPhoto">Сфотографируйте ваше\nудостоверение личности</string>
    <string name="takeUserSelfie">Сделайте селфи</string>
    <string name="photoUploaded">Фотография загружена</string>
    <string name="number1">1.</string>
    <string name="number2">2.</string>
    <string name="perfect">Отлично</string>
    <string name="registrationFinished">Вы успешно прошли регистрацию</string>
    <string name="registrationFinishedDescription">Теперь вы можете принимать заказы</string>

    <string name="infoDescription">Расскажите о себе: чем занимаетесь, на чем специализируйесь, какой у вас опыт работы
- все, что может быть полезно работодателю.\n\nПосле заполнения профиля с вами свяжется менеджер для собеседования. Он выявит сильные и слыбые стороны, на основе которых вы будете получать нужные заказы.
</string>


    <!--VerificationFragment -->
    <string name="verification">Верификация</string>
    <string name="codeIncorrect">Код неверен</string>
    <string name="codeDidNotCome">Код не пришел,</string>
    <string name="resend">отправить повторно</string>
    <string name="enter">Войти</string>
    <string name="enterVerificationCode">Введите код верификации отправленный на номер</string>

    <!--Navigation -->
    <string name="home">home</string>
    <string name="basket_nav">basket</string>
    <string name="offers">offers</string>
    <string name="user">user</string>
    <string name="responses">responses</string>

    <!--ResponsesFragment -->
    <string name="myResponses">Мои отклики</string>




    <!--BasketFragment -->
    <string name="basket">Корзина</string>
    <string name="clearBasket">Очистить</string>

    <!--UserFragment -->
    <string name="passportNotVerified">Паспорт не проверен</string>
    <string name="passportVerified">Паспорт проверен</string>
    <string name="documentVerification">Пройдите проверку документов</string>
    <string name="documentVerificationDescription">Сделайте фото паспорта и селфи для подтверждения личности</string>
    <string name="aboutUser">О себе</string>
    <string name="aboutUserDescription">Расскажите о себе в формате резюме</string>
    <string name="settings">Настройки</string>
    <string name="settingsDescription">Пуш уведомления, отклики, выход</string>
    <string name="workTypes">Типы работ</string>

    <!--UserRegion -->
    <string name="region">Местонахождение</string>
    <string name="yourRegion">Ваш регион</string>
    <string name="regionTint">Регион</string>

    <!--UserPickPhoto -->
    <string name="registration">Регистрация</string>
    <string name="uploadPhotoProfile">Загрузите фото профиля</string>
    <string name="attachPhoto">Прикрепить фото</string>
    <string name="photoReady">Готово</string>
    <string name="photoIsEmpty">Прикрепите фотографию профиля</string>

    <!--ServiceFragment -->
    <string name="fromQuestionnaire">По услугам из анкеты</string>
    <string name="searchOffers">Поиск заказа</string>
    <string name="before">до</string>
    <string name="ruble">руб.</string>
    <string name="searchContinue">Продолжить поиск</string>
    <string name="beforeTakeOrderVerifyPersonality">Извините, вы пока не можете выбрать этот заказ, вам необходимо подтвердить личность</string>


    <!--FragmentServiceMaterials -->
    <string name="chooseMaterial">Выбрать материалы</string>
    <string name="youNeedIt">Вам это понадобится</string>
    <string name="chooseOn">Выбрать на</string>
    <string name="instrumentalRent">Аренда инструментов</string>
    <string name="purchaseOfMaterials">Покупка материалов</string>
    <string name="chooseMaterialDescription">Здесь подобраны материалы, которые могут понадобится для выполнения этого заказа. При необходимости нажмите “ + ” чтобы добавить материал/инструмент, или “ - ” если материал вам не понадобится или вы имеете свой. Затраты вычитаются из указанной суммы.</string>

    <!--FragmentServiceTotal -->
    <string name="applyFor">Откликнуться за</string>
    <string name="nameItemTitle">Наименование</string>
    <string name="itemAmountTitle">Кол-во</string>
    <string name="itemPriceTitle">Сумма</string>
    <string name="materialsCost">Затраты на материалы:</string>
    <string name="responseSent">Отклик отправлен, ждите ответа в ближайшее время</string>

    <!--SettingsActivity -->
    <string name="settingsTitle">Настройки</string>
    <string name="settingsPhone">Телефон</string>
    <string name="settingsChatNotification">Уведомления о сообщениях в чатах</string>
    <string name="settingsChatNotificationTitle">Сообщения в чатах</string>
    <string name="settingsChatNotificationDescription">Пуш уведомления, эл. почта, СМС</string>
    <string name="settingsSave">Сохранить</string>
    <string name="settingsSMS">СМС</string>
    <string name="settingsPush">Пуш-уведомления</string>
    <string name="settingsEnterYourPhone">Введите ваш номер телефона</string>
    <string name="settingsSuitableOrderNotification">Уведомления о подходящих заказах</string>
    <string name="settingsSuitableOrderNotificationDescription">Пуш уведомления, эл. почта, СМС</string>
    <string name="settingsUserPhone">Телефон для связи</string>
    <string name="settingsUserMail">Электронная почта</string>
    <string name="settingsAddUserMail">Добавьте вашу электронную почту</string>
    <string name="settingsUserMailDescription">Введите вашу почту</string>
    <string name="settingsLogOut">Выйти из аккаунта</string>
    <string name="settingsSuitableOrderTitle">Подходящие заказы</string>

    <string name="settingsPhoneSaved">Телефон сохранен</string>
    <string name="settingsMailSaved">Электронная почта сохранена</string>
    <string name="settingsMailDoesNotExist">Данная электронная почта не существует</string>


    <!--OfferActivity -->
    <string name="offerDescription">Описание</string>
    <string name="offerAddressTitle">Адрес</string>
    <string name="offerWhen">Когда</string>
    <string name="offerRespond">Откликнуться</string>
    <string name="offerPriceIncludingMaterial">сумма с учетом\nматериалов</string>

    <!--Common -->
    <string name="internal_storage">Internal storage</string>
    <string name="serverError">Ошиба соединения с сервером, повторите попытку позже</string>



</resources>