<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/offers_selector"
        android:title="@string/offers" />


    <item
        android:id="@+id/navigation_responses"
        android:icon="@drawable/responses_selector"
        android:title="@string/responses" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/basket_selector"
        android:title="@string/basket_nav" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_selector"
        android:title="@string/user" />


</menu>