<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:divider="@drawable/divider_table_horizontal_code"
    android:orientation="horizontal"
    android:showDividers="middle"
    android:weightSum="7.5">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:gravity="center|center_vertical"
        android:text="@string/nameItemTitle"
        android:textColor="@color/color828282"
        android:theme="@style/TextStyleRegular" />

    <TextView
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/itemAmountTitle"
        android:textColor="@color/color828282"
        android:theme="@style/TextStyleRegular" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/itemPriceTitle"
        android:textColor="@color/color828282"
        android:theme="@style/TextStyleRegular" />
</LinearLayout>