<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg_val.registration.view.RegistrationFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
   >

        <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/registration"
            android:textSize="36sp"
            android:theme="@style/TextStyleDemiBold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/enterPhoneNumber"
            android:textSize="14sp"
            android:theme="@style/TextStyleRegular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_enter"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:textColorHint="@color/textColorNormal" />
        </LinearLayout>

        <TextView
            android:id="@+id/further"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_button"
            android:gravity="center"
            android:text="@string/further"
            android:theme="@style/TextStyleMedium" />
    </LinearLayout>

</FrameLayout>