<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg_ver.login.registration_fragments.WhatIsYourWorkFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registration"
        android:textColor="@color/color121212"
        android:textSize="14sp"
        android:theme="@style/TextStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whatIsYourJob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:text="@string/whatIsYourWork"
        android:textColor="@color/color121212"
        android:textSize="24sp"
        android:theme="@style/TextStyleDemiBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatIsYourJob">

        <RadioButton
            android:id="@+id/workMyself"
            style="@style/CustomRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="0dp"
            android:text="@string/workMyself"
            android:textColor="@drawable/radiobuttonstate"
            android:theme="@style/CustomRadioButton"
            tools:checked="false" />

        <RadioButton
            android:id="@+id/workCompany"
            style="@style/CustomRadioButton"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/workCompany"
            android:textColor="@drawable/radiobuttonstate"
            android:theme="@style/CustomRadioButton"
            tools:checked="true" />
    </RadioGroup>

    <TextView
        android:id="@+id/further"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_further_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/further"
        android:theme="@style/TextStyleMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>