<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settingsTitle"
        android:textColor="@color/color121212"
        android:textSize="14sp"
        android:theme="@style/TextStyleMedium"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/ic_more" />


    <TextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"

        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"


        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:text="@string/settingsLogOut"
        android:textColor="@color/color121212"
        android:theme="@style/TextStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsUserMail" />

    <LinearLayout
        android:id="@+id/layoutSettingsChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/settingsChatNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_back_gray"
            android:text="@string/settingsChatNotification"
            android:textColor="@color/color121212"
            android:theme="@style/TextStyleMedium" />

        <TextView
            android:id="@+id/settingsChatNotificationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settingsChatNotificationDescription"
            android:theme="@style/TextStyleRegular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSettingsSuitableOrderNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsChat">

        <TextView
            android:id="@+id/settingsSuitableOrderNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_back_gray"
            android:text="@string/settingsSuitableOrderNotification"
            android:textColor="@color/color121212"
            android:theme="@style/TextStyleMedium" />

        <TextView
            android:id="@+id/settingsSuitableOrderNotificationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settingsSuitableOrderNotificationDescription"
            android:theme="@style/TextStyleRegular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSettingsUserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsSuitableOrderNotification">

        <TextView
            android:id="@+id/settingsUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_back_gray"
            android:text="@string/settingsUserPhone"
            android:textColor="@color/color121212"
            android:theme="@style/TextStyleMedium" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:theme="@style/TextStyleRegular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSettingsUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsUserPhone">

        <TextView
            android:id="@+id/settingsUserMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_back_gray"
            android:text="@string/settingsUserMail"
            android:textColor="@color/color121212"
            android:theme="@style/TextStyleMedium" />

        <TextView
            android:id="@+id/userMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settingsAddUserMail"
            android:theme="@style/TextStyleRegular" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>